--- a/lesson22/task3/index.html
+++ b/lesson22/task3/index.html
@@ -23,6 +23,6 @@
       <ul class="list"></ul>
     </main>
 
-    <script src="index.js"></script>
+    <script type="module" src="src/scripts/index.js"></script>
   </body>
 </html>
