--- a/lesson27/task2/index.html
+++ b/lesson27/task2/index.html
@@ -11,6 +11,6 @@
     <div class="page">
       <span class="image-size"></span>
     </div>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
