--- a/lesson31/task4/index.html
+++ b/lesson31/task4/index.html
@@ -40,6 +40,6 @@
       </form>
     </main>
 
-    <script type="module" src="src/scripts/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
