--- a/lesson32/task3/index.html
+++ b/lesson32/task3/index.html
@@ -29,6 +29,6 @@
         <button class="name-form__btn btn">Show</button>
       </div>
     </div>
-    <script type="module" src="src/scripts/index.js" type="module"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
